initial working code and helpers

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,13 +7,14 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "static d3 example" %></title>
     
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <%= stylesheet_embed "normalize" %>
+    <%= javascript_embed "d3.min" %>
   </head>
   
-  <body class="<%= page_classes %>">
+  <body>
     <%= yield %>
   </body>
 </html>
+
