added ability to reference asset files (i.e. sass, coffeescript) from data embeds. some cleanup.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,6 +11,7 @@
     
     <%= stylesheet_embed "normalize" %>
     <%= javascript_embed "d3.min" %>
+    <script type="text/javascript">var data_embed = {};</script>
   </head>
   
   <body>
