--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,34 +4,8 @@ title: "static d3 example"
 
 <!-- adapted from http://bl.ocks.org/mbostock/3884914 -->
 
-<style>
+<%= stylesheet_embed "viz" %>
 
-body {
-  padding: 1em;
-}
-
-svg {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.x.axis path {
-  display: none;
-}
-
-.area {
-  fill: steelblue;
-}
-
-
-
-</style>
 
 <h1><%= current_page.data.title %></h1>
 
@@ -56,98 +30,12 @@ svg {
   <pre id="display_data"></pre>
 </div>
 
-<%# data_embed takes two arguments, 
-    #1: filename in source/data directory
-    #2: the name of the javascript variable the data is bound to. %>
-<%= data_embed 'data.tsv', 'rawData' %>
+<%# data_embed takes a single argument, the name of the data file in source/data. %>
+<%= data_embed 'data.tsv' %>
 
-<script>
+<%= javascript_embed 'viz' %>
 
-var margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var parseDate = d3.time.format("%Y%m%d").parse;
-
-var x = d3.time.scale()
-    .range([0, width]);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left");
-
-var area = d3.svg.area()
-    .x(function(d) { return x(d.date); })
-    .y0(function(d) { return y(d.low); })
-    .y1(function(d) { return y(d.high); });
-
-var svg = d3.select("#vis").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-// the original data was loaded via:
-// d3.tsv("data.tsv", function(error, data) {
-//   data.forEach(function(d) {
-//     d.date = parseDate(d.date);
-//     d.low = +d.low;
-//     d.high = +d.high;
-//   });
-//
-// which won't work. instead, we have to parse the rawData loaded from 
-// the data_embed we added to the page above like this:
-var data = d3.tsv.parse(rawData, function(d) {
-  return {
-    date: parseDate(d.date),
-    low: +d.low,
-    high: +d.high
-  };
-});
-
-d3.select('#display_data').html(rawData);
-
-x.domain(d3.extent(data, function(d) { return d.date; }));
-y.domain([d3.min(data, function(d) { return d.low; }), d3.max(data, function(d) { return d.high; })]);
-
-svg.append("path")
-    .datum(data)
-    .attr("class", "area")
-    .attr("d", area);
-
-svg.append("g")
-    .attr("class", "x axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(xAxis);
-
-svg.append("g")
-    .attr("class", "y axis")
-    .call(yAxis)
-  .append("text")
-    .attr("transform", "rotate(-90)")
-    .attr("y", 6)
-    .attr("dy", ".71em")
-    .style("text-anchor", "end")
-    .text("Temperature (ºF)");
-
-// optional image insert inside svg example:
-svg.selectAll("image").data([0])
-  .enter()
-  .append("svg:image")
-  .attr("xlink:href", "<%= inline data_uri('images/middleman.png', 'image/png') %>")
-  .attr("x", width - 55)
-  .attr("y", 5)
-  .attr("width", "50")
-  .attr("height", "50");
-
-
-</script>
+<%# simple coffeescript example to fill display_data. %>
+<%= javascript_embed 'show_data' %>
 
 
